# supercontext

./: .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  INDEX.md  PLATFORM-PRD.md  PRD.md  README.md  install.sh  package-lock.json  package.json  pyproject.toml
.codex/scripts/: poll_copilot_review.py  request_claude_pre_pr_review.py
.github/workflows/: ci.yml
adr/: 0001-claude-agent-sdk-for-internal-runtime.md  0002-mcp-protocol-for-external-surface.md  0003-postgres-age-as-initial-graph-storage.md  0004-canonical-graph-plus-candidate-enrichment-sidecar.md  0005-modular-evidence-retrieval-with-coordinate-fetch-and-selective-ladder.md  0006-canonical-ontology-and-fact-metadata-envelope.md  0007-deterministic-symbol-lookup-with-agentic-disambiguation.md  0008-deterministic-import-normalization-with-agentic-candidate-fallback.md  0009-deterministic-reverse-dependency-queries-with-agentic-candidate-enrichment.md  0010-deploy-target-without-domain.md  0011-python-import-distribution-aliases.md  README.md
agentic-layer/: AGENTIC-LAYER-RECOMMENDATION-V2.md
deep-wiki/: DEEPWIKI-OSS-ANALYSIS.md  claude-deepwiki-analysis.md
docs/: ADDING-A-LANGUAGE.md  COVERAGE-METRICS.md  CROSS-REPO-PACKAGE-LINKAGE-DEBATE-SEED.md  JS-TS-ENDPOINT-COVERAGE-JUMP-DEBATE-SEED.md  JS-TS-ENDPOINT-REMAINING-GAPS-DEBATE-SEED.md  K8S-ENV-HOST-LINKAGE-DEBATE-SEED.md  MCP-WORKFLOW-INTEGRATION-DEBATE-SEED.md  PLATFORM-PRD.md  PRD.md
docs/agentic-layer/: AGENTIC-LAYER-RECOMMENDATION-V2.md  AGENTIC-LAYER-RECOMMENDATION.md  AGENTIC-SKILLS-NOTE.md
docs/contributing/: ADDING-A-NEW-LANGUAGE.md
docs/evaluation/: AB_REPRODUCTION.md  CANONICAL-VALIDATION-REPORT.md  CONTRACT-RECONCILIATION-REGRESSION-RUN-2026-05-08.md  COVERAGE-METRICS-IMPLEMENTATION-PLAN.md  COVERAGE-METRICS-INCREMENTAL-AND-LINKING-GAPS.md  GOLDSET-ARTIFACT-CONSISTENCY-TRIAGE-2026-05-10.md  JAVA-DOTNET-TERRAFORM-TAXONOMY-NOTE.md  JS-TS-ENDPOINT-RESOLUTION-VALIDATION.md  LATTICEAI-CROSS-REPO-QUERY-RUN-2026-05-08.md  LATTICEAI-GOLDSET-ANSWERS-2026-05-09.md  LATTICEAI-GOLDSET-ANSWERS-2026-05-10.md  LATTICEAI-GOLDSET-ANSWERS-Q100-PR16.md  LATTICEAI-GOLDSET-EVENT-ANSWERS-2026-05-10.md  LATTICEAI-GOLDSET-EVENT-JUDGEMENT-2026-05-10.md  LATTICEAI-GOLDSET-EVIDENCE-PACKETS-2026-05-08.json  LATTICEAI-GOLDSET-JUDGEMENT-2026-05-09.md  LATTICEAI-GOLDSET-JUDGEMENT-2026-05-10.md  LATTICEAI-GOLDSET-JUDGEMENT-Q100-PR16.md  LOW-QUERY-RERUN-IMPORT-NORMALIZATION-2026-05-06.md  LOW-QUERY-RERUN-TRUE-LOOP-PARSER-BACKED-2026-05-08.md  LOW-QUERY-RUN-2026-05-06.md  LOW-QUERY-RUN-TRUE-LOOP-2026-05-07.md  MEDIUM-QUERY-AGGREGATION-RUN-2026-05-08.md  MEDIUM-QUERY-RUN-2026-05-08.md  MIXED-CALL-IMPORT-PATH-RUN-2026-05-08.md  MULTI-REPO-LINKING-SMOKE-2026-05-08.md  NEXT-GAP-ANALYSIS-POST-PR17-2026-05-10.md  NEXT-GAP-EVALUATION-2026-05-10.md  PRIVATE-GOLDSET-ANSWERS-2026-05-11.md  PRIVATE-GOLDSET-JUDGEMENT-2026-05-11.md  PRODUCT-QUERY-SET-RUN-2026-05-12.md  PRODUCT-QUERY-SET-RUN-EXPECTED.json  PRODUCT-QUERY-SET.md  Q081-GOLDSET-ANSWERS-2026-05-12.md  Q081-GOLDSET-JUDGEMENT-2026-05-12.md  Q084-Q092-GOLDSET-ANSWERS-2026-05-12.md  Q084-Q092-GOLDSET-JUDGEMENT-2026-05-12.md  README.md  SYMBOL-QUERY-SURFACES-SMOKE-2026-05-08.md  claude-kg-coverage-metrices.md  (+8 more)
docs/evidence-retrieval/: EVIDENCE-RETRIEVAL-RECOMMENDATION.md  claude-evidence-retrieval-research.md  codex-runtime-retrieval-patterns.md
docs/getting-started/: COMPLETION-SUMMARY.md  GLOSSARY.md  README.md
docs/graph-building/: GRAPH-BUILDING-RECOMMENDATION.md  TYPED-CLIENT-EXTRACTOR-ALLOWLIST.md  claude-graph-building-research.md  codex-graph-building-research.md
docs/graph-storage/: GRAPH-STORAGE-RECOMMENDATION.md  claude-graph-storage-research.md  codex-graph-storage-research.md
docs/mcp/: CLAUDE_CODE_SKILL.md  CODEX_SKILL.md  HOST_SKILL_EVALUATION.md  MCP-TOOL-OUTPUT-FIELDS.md  _shared_skill_body.md
docs/ontology/: ONTOLOGY-RECOMMENDATION.md  claude-ontology-prior-art-research.md  codex-ontology-prior-art-research.md
docs/overall-architecture/: TECHNICAL-BUILDING-BLOCKS.md  claude-code-research.md  codex-code-research.md
docs/plans/: GENERIC-EVENT-ENDPOINT-EVIDENCE-UPGRADE-PLAN.md  MEDIUM-QUERY-AGGREGATION-LAYER-PLAN.md  MIXED-CALL-IMPORT-PATH-SEARCH-PLAN.md
evals/codesearchnet/: run_dataset_eval.py  run_dataset_eval_v2.py  run_eval.py  run_three_way_eval.py
evidence-retrieval/: EVIDENCE-RETRIEVAL-RECOMMENDATION.md  claude-evidence-retrieval-research.md  codex-evidence-retrieval-research.md  codex-runtime-retrieval-patterns.md
graph-building/: GRAPH-BUILDING-RECOMMENDATION.md  TYPED-CLIENT-EXTRACTOR-ALLOWLIST.md  claude-graph-building-research.md  codex-graph-building-research.md
graph-storage/: GRAPH-STORAGE-RECOMMENDATION.md  claude-graph-storage-research.md  codex-graph-storage-research.md
ontology/: ONTOLOGY-RECOMMENDATION.md  claude-ontology-prior-art-research.md
overall-architecture/: TECHNICAL-BUILDING-BLOCKS.md
source/: KG-QUERY-SMOKE-TESTS.md  README.md  __init__.py
source/kg/: __init__.py  (+14 more)
tests/: test_ab_eval_corpus.py  test_ab_eval_cost_status.py  test_ab_eval_orchestrator.py  test_adapter_framework.py  test_aggregate_ab_report.py  test_apache_vhost_extraction.py  test_baseline_drift.py  test_classify_non_wins.py  test_compare_snapshot_baseline.py  test_compute_ab_deltas.py  test_contract_reconciliation.py  test_copilot_polling.py  test_deploy_mappings.py  test_dotenv_extraction.py  test_dotnet_endpoint_extractor.py  test_dotnet_event_extractor.py  test_endpoint_extraction.py  test_event_channel_normalization.py  test_event_channel_promotion.py  test_evidence_score.py  test_fastapi_routes.py  test_fixture_variable_bindings.py  test_goldset_harness.py  test_grpc_proto_endpoints.py  test_import_normalization.py  test_interactive_query.py  test_judge_ab_quality.py  test_kubernetes_yaml_extraction.py  test_langsmith_emitter.py  test_mcp_quality_floor_gate.py  test_mcp_registration.py  test_mcp_skill_installer.py  test_mcp_tools.py  test_multi_repo_identity.py  test_org_cli.py  test_org_git.py  test_org_github.py  test_org_workspace.py  test_ownership_context.py  test_packaging_metadata.py  (+28 more)
(+516 files in other folders)
