[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercontext"
version = "0.1.0"
description = "Typed cross-service knowledge graph for AI coding agents in microservice organizations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BetterContext contributors" }]
dependencies = ["PyYAML>=6.0"]
keywords = ["code-analysis", "knowledge-graph", "mcp", "software-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/roshansingh/bettercontext"
Issues = "https://github.com/roshansingh/bettercontext/issues"

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
llm = ["openai>=1.0"]
agent = ["claude-agent-sdk"]
dev = ["build>=1.2"]
dotnet = ["tree-sitter>=0.20", "tree-sitter-c-sharp>=0.20"]

[project.scripts]
bettercontext-build-kg = "source.scripts.build_kg:main"
bettercontext-build-multi-kg = "source.scripts.build_multi_kg:main"
bettercontext-query-kg = "source.scripts.query_kg:main"
bettercontext-mcp-server = "source.scripts.mcp_server:main"
bettercontext-run-validation = "source.scripts.run_product_validation:main"

[tool.setuptools.packages.find]
include = ["source*"]

[tool.setuptools.package-data]
"source.kg.languages.typescript.extractors" = ["ts_parser.mjs"]
"source.kg.languages.python" = ["known_stacks.yaml"]
"source.kg.languages.typescript" = ["known_stacks.yaml"]
"source.kg.languages.dotnet" = ["known_stacks.yaml"]
