[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bettercontext"
version = "0.1.0"
description = "Typed cross-service knowledge graph for AI coding agents in microservice organizations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BetterContext contributors" }]
dependencies = ["packaging>=24.0", "PyYAML>=6.0"]
keywords = ["code-analysis", "knowledge-graph", "mcp", "software-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/roshansingh/bettercontext"
Issues = "https://github.com/roshansingh/bettercontext/issues"

[project.optional-dependencies]
ui = ["streamlit>=1.30"]
llm = ["openai>=1.0"]
agent = ["claude-agent-sdk"]
dev = ["build>=1.2"]
dotnet = ["tree-sitter>=0.25", "tree-sitter-c-sharp>=0.23.5"]

[project.scripts]
bettercontext-build-kg = "source.scripts.build_kg:main"
bettercontext-build-multi-kg = "source.scripts.build_multi_kg:main"
bettercontext-init = "source.scripts.setup_repo:main"
bettercontext-relink = "source.scripts.relink:main"
bettercontext-query-kg = "source.scripts.query_kg:main"
bettercontext-mcp-server = "source.scripts.mcp_server:main"
bettercontext-install-mcp-skills = "source.scripts.install_mcp_skills:main"
bettercontext-run-validation = "source.scripts.run_product_validation:main"
bettercontext-coverage-metrics = "source.scripts.coverage_metrics:main"
bettercontext-coverage-report = "source.scripts.coverage_report:main"

[tool.setuptools.packages.find]
include = ["source*"]

[tool.setuptools.package-data]
"source.kg.languages.typescript.extractors" = ["ts_parser.mjs"]
"source.kg.languages.dotnet" = ["known_stacks.yaml", "dimension_rules.yaml"]
"source.kg.metrics" = ["config.yaml", "tool_predicates.yaml", "useful_edges.yaml"]
"source.kg.languages.python" = ["known_stacks.yaml", "dimension_rules.yaml"]
"source.kg.languages.typescript" = ["known_stacks.yaml", "dimension_rules.yaml"]
"source.kg.product" = ["mcp_skill_templates/*/bettercontext-mcp/SKILL.md"]
